<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_type_required"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/networkOptions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="15dp">

                <RadioButton
                    android:id="@+id/noNetwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/anyNetwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any"/>

                <RadioButton
                    android:id="@+id/wifiNetwork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi"/>
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requires"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <Switch
                    android:id="@+id/idleSwitch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/device_idle" />

                <Switch
                    android:id="@+id/chargingSwitch"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Device Charging" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="25dp">

                <TextView
                    android:id="@+id/seekBarLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/override_deadline"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/seekBarProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_set"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
            </LinearLayout>

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"/>

            <Button
                android:id="@+id/schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Schedule Job"
                android:onClick="scheduleJob"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cancel Jobs"
                android:onClick="cancelJobs"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textSize="18sp"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backgroundTint="#E5DCF2"
        app:itemIconTint="@color/bottom_nav_icon_tint"
        app:itemTextColor="@color/bottom_nav_text_tint"
        app:menu="@menu/bottom_nav_menu"/>
</LinearLayout>
